--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "bootstrap-sass-official": "~3.2.0",
-    "modernizr": "~2.8.2"
+    "modernizr": "~2.8.2",
+    "animate.css": "~3.2.0"
   }
 }
